# Assignment-Grader

./: .dockerignore  .env.example  README.md  client.py  dockerfile  pyproject.toml  requirements.txt  server.py
