[project]
name = "assignement-grader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fpdf>=1.7.2",
    "fuzzywuzzy>=0.18.0",
    "humanize>=4.12.2",
    "openai>=1.75.0",
    "pymupdf>=1.25.5",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.2",
]
